# ployz

./: .dockerignore  .env.targets.example  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile.dataplane  Dockerfile.dns  Dockerfile.e2e-node  Dockerfile.gateway  Dockerfile.networking  LICENSE.md  OWNERSHIP_REPORT.md  README.md  VISION.md  build.rs  doc.go  docker.sock  go.mod  go.sum  health.go  justfile  machine.go  management.go  package.json  ployz.sh
crates/ployz/: Cargo.toml
crates/ployz-api/: Cargo.toml
crates/ployz-api/src/: lib.rs
crates/ployz-api/src/transport/: mod.rs  stdio.rs  unix.rs
crates/ployz-cli/: Cargo.toml
crates/ployz-cli/src/: main.rs
crates/ployz-config/: Cargo.toml
crates/ployz-config/src/: corrosion.rs  lib.rs
crates/ployz-core/: Cargo.toml  build.rs
crates/ployz-core/src/: corrosion_config.rs  lib.rs  machine_liveness.rs
crates/ployz-core/src/deploy/: local.rs  mod.rs  remote.rs  session.rs
crates/ployz-core/src/mesh/: container_network.rs  driver.rs  mod.rs  orchestrator.rs  peer.rs  peer_state.rs  probe.rs
crates/ployz-core/src/mesh/tasks/: ebpf_sync.rs  endpoint_refresh.rs  heartbeat.rs  mod.rs  participation.rs  peer_sync.rs  self_liveness.rs  self_record.rs
crates/ployz-core/src/mesh/wireguard/: bridge.rs  config.rs  docker.rs  host.rs  mod.rs  sidecar.rs
crates/ployz-core/src/network/: docker_bridge.rs  endpoints.rs
crates/ployz-core/src/network/ebpf/: container.rs  mod.rs  native.rs
crates/ployz-core/src/node/: identity.rs
crates/ployz-core/src/runtime/: diff.rs  engine.rs  image_ref.rs  labels.rs  probe.rs  spec.rs
crates/ployz-core/src/store/: bootstrap.rs  driver.rs  mod.rs  network.rs
crates/ployz-core/tests/: lifecycle.rs
crates/ployz-corrosion/: Cargo.toml
crates/ployz-corrosion/src/: admin.rs  bootstrap.rs  client.rs  config.rs  lib.rs  runtime.rs  schema.sql  store.rs
crates/ployz-corrosion/src/store/: mod.rs
crates/ployz-corrosion/src/store/shared/: decode.rs  mod.rs  sql.rs
crates/ployz-corrosion/src/store/tables/: deploys.rs  instance_status.rs  invites.rs  machines.rs  mod.rs  service_heads.rs  service_releases.rs  service_revisions.rs  service_slots.rs
crates/ployz-corrosion/src/store/workflows/: deploy_commit.rs  mod.rs  (+1 more)
crates/ployz-dns/: Cargo.toml
crates/ployz-dns/src/: config.rs  lib.rs  main.rs  resolve.rs  server.rs  snapshot.rs  sync.rs
crates/ployz-e2e/: Cargo.toml
crates/ployz-e2e/src/: cli.rs  error.rs  main.rs  runner.rs  support.rs
crates/ployz-e2e/src/scenarios/: deploy_smoke.rs  dual_controller_add.rs  machine_add_basic.rs  machine_remove_guard.rs  mod.rs  replace_machine.rs  single_node_init.rs  split_brain_concurrent_add_subnet_heal.rs  wireguard_reconnect.rs
crates/ployz-gateway/: Cargo.toml
crates/ployz-gateway/src/: app.rs  config.rs  lib.rs  main.rs  proxy.rs  routes.rs  server.rs  snapshot.rs  state.rs  sync.rs
crates/ployz-orchestrator/: Cargo.toml
crates/ployz-orchestrator/src/: ipam.rs  lib.rs  machine_liveness.rs
crates/ployz-orchestrator/src/deploy/: mod.rs  session.rs
crates/ployz-orchestrator/src/mesh/: driver.rs  mod.rs  orchestrator.rs  peer_state.rs  phase.rs  probe.rs
crates/ployz-orchestrator/src/network/: endpoints.rs  mod.rs
crates/ployz-orchestrator/tests/: lifecycle.rs
crates/ployz-routes/: Cargo.toml
crates/ployz-routes/src/: lib.rs
crates/ployz-runtime-api/: Cargo.toml
crates/ployz-runtime-api/src/: deploy.rs  identity.rs  lib.rs  network.rs
crates/ployz-runtime-backends/: Cargo.toml
crates/ployz-runtime-backends/src/: lib.rs
crates/ployz-runtime-backends/src/deploy/: local.rs  locks.rs  mod.rs  remote.rs  session.rs
crates/ployz-runtime-backends/src/mesh/: dataplane.rs  driver.rs  endpoints.rs  mod.rs
crates/ployz-runtime-backends/src/network/: docker_bridge.rs  mod.rs
crates/ployz-runtime-backends/src/runtime/: corrosion.rs  diff.rs  engine.rs  image_ref.rs  labels.rs  mod.rs  probe.rs  spec.rs
crates/ployz-runtime-backends/src/store/: driver.rs  mod.rs
crates/ployz-sdk/: Cargo.toml
crates/ployz-sdk/src/: client.rs  config.rs  lib.rs  model.rs  paths.rs  spec.rs  store.rs
crates/ployz-sdk/src/transport/: mod.rs  protocol.rs  stdio.rs  unix.rs
crates/ployz-store-api/: Cargo.toml
crates/ployz-store-api/src/: driver.rs  lib.rs  memory.rs  traits.rs
crates/ployz-store-corrosion/: Cargo.toml
crates/ployz-store-corrosion/src/: docker.rs  driver.rs  host.rs  lib.rs  routing.rs
crates/ployz-types/: Cargo.toml
crates/ployz-types/src/: lib.rs  model.rs  spec.rs  store.rs  time.rs
crates/ployz/src/: drivers.rs  lib.rs  machine_liveness.rs  sidecar.rs
crates/ployz/src/adapters/: docker_network.rs  mod.rs
crates/ployz/src/daemon/: mod.rs  setup.rs  ssh.rs
crates/ployz/src/deploy/: local.rs  locks.rs  mod.rs  remote.rs  session.rs
crates/ployz/src/dns/: mod.rs
crates/ployz/src/gateway/: mod.rs
crates/ployz/src/mesh/: carrier.rs  driver.rs  mod.rs  orchestrator.rs  peer.rs  peer_state.rs  phase.rs
crates/ployz/src/network/: docker_bridge.rs  endpoints.rs  ipam.rs  mod.rs
crates/ployz/src/node/: identity.rs  invite.rs
crates/ployz/src/runtime/: diff.rs  engine.rs  mod.rs  probe.rs  spec.rs
crates/ployz/src/services/: dns.rs  gateway.rs  supervisor.rs
crates/ployz/src/store/: bootstrap.rs  driver.rs  mod.rs  network.rs
crates/ployz/src/transport/: listener.rs  mod.rs
crates/ployz/src/workload/: diff.rs  manager.rs  mod.rs  runner.rs  volume.rs
crates/ployz/tests/: lifecycle.rs
crates/ployzd/: Cargo.toml
crates/ployzd/assets/: built_in_images.toml
crates/ployzd/src/: app.rs  built_in_images.rs  cli.rs  cli_io.rs  daemon_entry.rs  install.rs  lib.rs  main.rs  platform.rs  request_builder.rs  runtime_profile.rs
crates/ployzd/src/daemon/: mod.rs  runtime.rs  setup.rs  ssh.rs  store.rs
crates/ployzd/src/ipc/: listener.rs
crates/ployzd/src/mesh_state/: bootstrap.rs  invite.rs  mod.rs  network.rs
crates/ployzd/src/services/: corrosion.rs  dns.rs  gateway.rs  mod.rs  supervisor.rs
ebpf/: Cargo.toml
ebpf/src/: main.rs
(+958 files in other folders)
