[workspace]
members = [
    "crates/ployz",
    "crates/ployz-sdk",
    "crates/ployz-cli",
    "crates/ployz-routes",
    "crates/ployz-corrosion",
    "crates/ployz-gateway",
    "crates/ployz-dns",
    "crates/ebpf-common",
    "crates/ebpf",
    "crates/ployz-bpfctl",
]
default-members = [
    "crates/ployz",
    "crates/ployz-sdk",
    "crates/ployz-cli",
    "crates/ployz-routes",
    "crates/ployz-corrosion",
    "crates/ployz-gateway",
    "crates/ployz-dns",
    "crates/ebpf-common",
]
resolver = "3"
