[workspace]
members = [
    "crates/ployz-core",
    "crates/ployz-sdk",
    "crates/ployzd",
    "crates/ployz-routes",
    "crates/ployz-corrosion",
    "crates/ployz-gateway",
    "crates/ployz-dns",
    "crates/ebpf-common",
    "crates/ployz-bpfctl",
]
default-members = [
    "crates/ployz-core",
    "crates/ployz-sdk",
    "crates/ployzd",
    "crates/ployz-routes",
    "crates/ployz-corrosion",
    "crates/ployz-gateway",
    "crates/ployz-dns",
    "crates/ebpf-common",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync", "time", "net", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["display"] }
ipnet = { version = "2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.10"
async-trait = "0.1"
toml = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-util = "0.7"
http = "1"
libc = "0.2"
directories = "6"
figment = { version = "0.10", features = ["env", "toml"] }
strum = { version = "0.26", features = ["derive"] }
