[package]
name = "ployz-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ployz"
path = "src/main.rs"

[dependencies]
ployz-sdk = { path = "../ployz-sdk" }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
