[package]
name = "ployz-config"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
directories = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
