[package]
name = "ployz-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ployz_core"
path = "src/lib.rs"

[dependencies]
ployz-types = { path = "../ployz-types" }
ployz-ebpf-common = { path = "../ebpf-common" }
tokio = { workspace = true, features = ["process", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }
hostname = "0.4.2"

base64 = { workspace = true }
ed25519-dalek = "2"
futures-util = { workspace = true }
ipnet = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
if-addrs = "0.13"
rusqlite = "0.38"

[features]
ebpf-native = ["dep:aya", "dep:aya-build"]

[dependencies.aya]
version = "0.13"
optional = true

[build-dependencies.aya-build]
version = "0.1"
optional = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
