[package]
name = "ployz-corrosion"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ployz-sdk = { path = "../ployz-sdk" }
corro-api-types = { git = "https://github.com/getployz/corrosion.git", branch = "main" }
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "time"] }
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "tokio"] }
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-util = "0.7"
pin-project-lite = "0.2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
thiserror = "2"
ipnet = { version = "2.12.0", features = ["serde"] }
toml = "0.8"

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
