[package]
name = "ployz-corrosion"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ployz-types = { path = "../ployz-types" }
corro-api-types = { git = "https://github.com/getployz/corrosion.git", branch = "main" }
tokio = { workspace = true }
hyper = { version = "1", features = ["client", "http2"] }
# TODO: remove client-legacy when migrating to hyper's modern conn::http2 API
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "tokio"] }
http = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
bytes = "1"
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
pin-project-lite = "0.2"
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
toml = { workspace = true }
strum = { workspace = true }
rusqlite = "0.38"

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
