[package]
name = "ployz-dns"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ployz_dns"
path = "src/lib.rs"

[[bin]]
name = "ployz-dns"
path = "src/main.rs"

[dependencies]
ployz-sdk = { path = "../ployz-sdk" }
ployz-corrosion = { path = "../ployz-corrosion" }
hickory-server = "0.25"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
