[package]
name = "ployz-dns"
version.workspace = true
edition = "2024"
publish = false

[lib]
name = "ployz_dns"
path = "src/lib.rs"

[dependencies]
ployz-config = { path = "../ployz-config" }
ployz-store-api = { path = "../ployz-store-api" }
ployz-types = { path = "../ployz-types" }
hickory-server = "0.25"
tokio = { workspace = true }
# TODO: remove when upstream hickory drops async_trait
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
