[package]
name = "ployz-e2e"
version.workspace = true
edition = "2024"
rust-version = "1.85"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
clap.workspace = true
ployz-api = { path = "../ployz-api" }
ployz-sdk = { path = "../ployz-sdk" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
uuid.workspace = true
