[package]
name = "ployz-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ployz_gateway"
path = "src/lib.rs"

[[bin]]
name = "ployz-gateway"
path = "src/main.rs"

[dependencies]
ployz-sdk = { path = "../ployz-sdk" }
ployz-routes = { path = "../ployz-routes" }
ployz-corrosion = { path = "../ployz-corrosion" }
pingora = { version = "0.8.0", features = ["lb"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
http = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
