[package]
name = "ployz-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ployz_gateway"
path = "src/lib.rs"

[dependencies]
ployz-config = { path = "../ployz-config" }
ployz-store-api = { path = "../ployz-store-api" }
ployz-types = { path = "../ployz-types" }
serde = { workspace = true }
serde_json = { workspace = true }
pingora = { version = "0.8.0", features = ["lb"] }
tokio = { workspace = true }
# TODO: remove when upstream pingora drops async_trait
async-trait = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
