[package]
name = "ployz-orchestrator"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ployz_orchestrator"
path = "src/lib.rs"

[dependencies]
ployz-state = { path = "../ployz-state" }
ployz-store-api = { path = "../ployz-store-api" }
ployz-types = { path = "../ployz-types" }
async-trait = { workspace = true }
futures-util = { workspace = true }
ipnet = { workspace = true }
tokio = { workspace = true, features = ["process", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[features]
ebpf-native = ["ployz-state/ebpf-native"]

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
