[package]
name = "ployz-orchestrator"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "ployz_orchestrator"
path = "src/lib.rs"

[dependencies]
ployz-ebpf-common = { path = "../ebpf-common" }
ployz-runtime-api = { path = "../ployz-runtime-api" }
ployz-store-api = { path = "../ployz-store-api" }
ployz-types = { path = "../ployz-types" }
async-trait = { workspace = true }
futures-util = { workspace = true }
ipnet = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
if-addrs = "0.13"

[features]
ebpf-native = ["dep:aya"]

[dependencies.aya]
version = "0.13"
optional = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
ployz-runtime-backends = { path = "../ployz-runtime-backends" }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
