[package]
name = "ployz-runtime-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hostname = "0.4.2"
ployz-types = { path = "../ployz-types" }
async-trait = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
