[package]
name = "ployz-runtime-backends"
version = "0.1.0"
edition = "2024"
publish = false

[features]
ebpf-native = ["dep:aya"]

[dependencies]
ployz-config = { path = "../ployz-config" }
ployz-ebpf-common = { path = "../ebpf-common" }
ployz-runtime-api = { path = "../ployz-runtime-api" }
ployz-types = { path = "../ployz-types" }
tokio = { workspace = true, features = ["process", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }
libc = { workspace = true }
ipnet = { workspace = true }
chrono = { workspace = true }
bollard = "0.20.1"
defguard_wireguard_rs = "0.9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "medium-ip", "proto-ipv6", "socket-tcp"] }
defguard_boringtun = "0.6"
hostname = "0.4.2"
if-addrs = "0.13"
ed25519-dalek = "2"

[dependencies.aya]
version = "0.13"
optional = true

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
