[package]
name = "ployz-sdk"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ployz-types = { path = "../ployz-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process"] }
figment = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
directories = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
