[package]
name = "ployz-sdk"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ployz-api = { path = "../ployz-api" }
ployz-config = { path = "../ployz-config" }
ployz-types = { path = "../ployz-types" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "process"] }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
