[package]
name = "ployz-store-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ployz-runtime-api = { path = "../ployz-runtime-api" }
ployz-types = { path = "../ployz-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
