[package]
name = "ployz"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ployzd"
path = "src/bin/ployzd.rs"

[dependencies]
ployz-sdk = { path = "../ployz-sdk" }
ployz-routes = { path = "../ployz-routes" }
ployz-corrosion = { path = "../ployz-corrosion" }
ployz-gateway = { path = "../ployz-gateway" }
ployz-ebpf-common = { path = "../ebpf-common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
derive_more = { version = "2.1.1", features = ["display"] }
rand = "0.10.0"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
hostname = "0.4.2"
directories = "6.0.0"
figment = { version = "0.10", features = ["env", "toml"] }
toml = "0.8"

base64 = "0.22"
ed25519-dalek = "2"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
bollard = "0.20.1"
defguard_wireguard_rs = "0.9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ipnet = { version = "2.12.0", features = ["serde"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "medium-ip", "proto-ipv6", "socket-tcp"] }
defguard_boringtun = "0.6"
if-addrs = "0.13"
rusqlite = "0.38"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

[features]
ebpf-native = ["dep:aya", "dep:aya-build"]

[dependencies.aya]
version = "0.13"
optional = true

[build-dependencies.aya-build]
version = "0.1"
optional = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
