[package]
name = "ployz"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ployzd"
path = "src/bin/ployzd.rs"

[dependencies]
ployz-sdk = { path = "../ployz-sdk" }
ployz-routes = { path = "../ployz-routes" }
ployz-corrosion = { path = "../ployz-corrosion" }
ployz-gateway = { path = "../ployz-gateway" }
ployz-dns = { path = "../ployz-dns" }
ployz-ebpf-common = { path = "../ebpf-common" }
tokio = { workspace = true, features = ["process", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
hostname = "0.4.2"
directories = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }

base64 = { workspace = true }
ed25519-dalek = "2"
uuid = { workspace = true }
futures-util = { workspace = true }
bollard = "0.20.1"
defguard_wireguard_rs = "0.9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ipnet = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "medium-ip", "proto-ipv6", "socket-tcp"] }
defguard_boringtun = "0.6"
if-addrs = "0.13"
rusqlite = "0.38"
chrono = { workspace = true }

[features]
ebpf-native = ["dep:aya", "dep:aya-build"]

[dependencies.aya]
version = "0.13"
optional = true

[build-dependencies.aya-build]
version = "0.1"
optional = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
