[package]
name = "ployzd"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ployzd"
path = "src/main.rs"

[[bin]]
name = "ployz"
path = "src/bin/ployz.rs"

[features]
ebpf-native = ["ployz-core/ebpf-native"]

[dependencies]
ployz-core = { path = "../ployz-core" }
ployz-sdk = { path = "../ployz-sdk" }
ployz-gateway = { path = "../ployz-gateway" }
ployz-dns = { path = "../ployz-dns" }
clap = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
